add_executable(astsrcrepo astsrcrepo.cpp)
add_executable(astnoderepo astnoderepo.cpp)
add_executable(astserializer astserializer.cpp)
add_executable(test-base64 base64.cpp)
add_executable(mwcparse mwcparse.cpp)
add_executable(mwcstage mwcstage.cpp)
add_executable(mwcdump mwcdump.cpp)
add_executable(mwcbendc mwcbendc.cpp)
add_executable(mwcbendcpkg mwcbendcpkg.cpp)

target_link_libraries(astsrcrepo ast ${Boost_LIBRARIES})
target_link_libraries(astnoderepo ast ${Boost_LIBRARIES})
target_link_libraries(astserializer ast ${Boost_LIBRARIES})
target_link_libraries(test-base64 base64)
target_link_libraries(mwcparse ast driver ${Boost_LIBRARIES})
target_link_libraries(mwcstage ast stage ${Boost_LIBRARIES})
target_link_libraries(mwcdump ast ${Boost_LIBRARIES})
target_link_libraries(mwcbendc ast backendc sqlite3 stage ${Boost_LIBRARIES})
target_link_libraries(mwcbendcpkg ast backendc sqlite3 stage ${Boost_LIBRARIES})

# Add unit tests if the corresponding boost library is found.
if (Boost_UNIT_TEST_FRAMEWORK_FOUND)
	add_executable(test-parser parser/detail.cpp parser/tests.cpp)
	target_link_libraries(test-parser ast driver ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
	add_test(parser test-parser)
endif()
