add_executable(astsrcrepo astsrcrepo.cpp)
add_executable(astnoderepo astnoderepo.cpp)
add_executable(astserializer astserializer.cpp)
add_executable(base64 base64.cpp)
add_executable(mwcparse mwcparse.cpp)
add_executable(mwcstage mwcstage.cpp)
add_executable(mwcdump mwcdump.cpp)
add_executable(mwcbendc mwcbendc.cpp)

target_link_libraries(astsrcrepo ast ${Boost_LIBRARIES})
target_link_libraries(astnoderepo ast ${Boost_LIBRARIES})
target_link_libraries(astserializer ast ${Boost_LIBRARIES})
target_link_libraries(mwcparse ast driver ${Boost_LIBRARIES})
target_link_libraries(mwcstage ast stage ${Boost_LIBRARIES})
target_link_libraries(mwcdump ast ${Boost_LIBRARIES})
target_link_libraries(mwcbendc ast backendc stage ${Boost_LIBRARIES})