add_library(backendc
	Repository.cpp
	CodeGenerator.cpp
	TypeSnippet.cpp
	Packager.cpp
	Packager-collect.cpp
	Packager-sort.cpp
	Packager-group.cpp
	Packager-compile.cpp
	database.cpp
	CodeGen2.cpp
	code.cpp
	CodeGen2/BlockExpr.cpp
	CodeGen2/DefinedType.cpp
	CodeGen2/FuncDef.cpp
	CodeGen2/TupleType.cpp
	CodeGen2/TypeDef.cpp
)
