add_library(backendc
	Repository.cpp
	CodeGenerator.cpp
	TypeSnippet.cpp
	Packager.cpp
	Packager-collect.cpp
	Packager-sort.cpp
	Packager-group.cpp
	Packager-compile.cpp
	database.cpp
	CodeGen2.cpp
	code.cpp
	CodeGen2/AssignmentExpr.cpp
	CodeGen2/BlockExpr.cpp
	CodeGen2/CallIntf.cpp
	CodeGen2/DefinedType.cpp
	CodeGen2/FuncDef.cpp
	CodeGen2/FuncExpr.cpp
	CodeGen2/FuncType.cpp
	CodeGen2/IdentifierExpr.cpp
	CodeGen2/NumberConstExpr.cpp
	CodeGen2/TupleExpr.cpp
	CodeGen2/TupleType.cpp
	CodeGen2/TypeDef.cpp
	CodeGen2/VarDefExpr.cpp
)
